Issue 5769 (Long values in DOM tab not collapse back when closed) http://code.google.com/p/fbug/issues/detail?id=5769

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -44,6 +44,7 @@
 
 .memberRow {
     height: 100%;
+    border: 1px solid transparent; /* see issue 5769 */
 }
 
 .memberRowHeader {
